# python_paint_project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  readme.md  requirements-dev.txt  run.py  setup.py  tox.ini
demo1/: README.md  __init__.py  about.py  baslat.py  canvas_image.py  kullanim_kilavuzu.md  main.py  requirements.txt  tools.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_static/: custom.css  custom.js
tests/: __init__.py  test_tools.py
